# scribe

./: .STATUS  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .markdownlint.json  404.html  ACCESSIBILITY_TRACKING.md  ACTION-PLAN.md  ANALYSIS-WikiLink-Fix-Window-Drag-Regression.md  ANALYSIS-icon-bar-issues-2026-01-11.md  ARCHITECTURE-mission-sidebar.md  ARCHITECTURE-smart-icons.md  AUTOCOMPLETE-THEMING-2026-01-06.md  BRAINSTORM-RIGHT-SIDEBAR.md  BRAINSTORM-TAURI-TO-SWIFTUI.md  BRAINSTORM-browser-fallback-2025-12-28.md  BRAINSTORM-dual-runtime-architecture.md  BRAINSTORM-hybrid-editor-2025-12-31.md  BRAINSTORM-mcp-app-2026-02-22.md  BRAINSTORM-quarto-code-chunks-2026-02-24.md  BRAINSTORM-sidebar-tabs-unification-2025-12-30.md  BRANCH-CLEANUP-2026-01-11.md  BRANCH-STATUS.md  BUG-ANALYSIS-WikiLink-E2E-Tests.md  CALLOUT-DEBUG-PLAN.md  CALLOUT-FIX-SUMMARY.md  CHANGELOG.md  CI-AUTOMATION-SUMMARY.md  CI-WORKFLOW-GUIDE.md  CLAUDE.md  CODE-REVIEW-REPORT.md  CODE-REVIEW-WINDOW-DRAGGING.md  COMPONENT-ActivityBar.md  COVERAGE_TRACKING.md  E2E-COMPLETE-DIAGNOSIS.md  E2E-DEBUG-PLAN.md  E2E-DEBUGGING-SESSION-FINDINGS.md  E2E-FINAL-RECOMMENDATIONS.md  E2E-TEST-FIX-GUIDE.md  (+109 more)
.claude/: WORKTREE-ISOLATION.md  settings.local.json
.husky/: pre-commit
API/: index.html
ARCHITECTURE/: index.html
BRAINSTORM-left-sidebar-layouts-2026-01-08/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: academic.rs  commands.rs  database.rs  lib.rs  main.rs  terminal.rs  testing.rs
src-tauri/src/tests/: chat_history_tests.rs  mod.rs
(+929 files in other folders)
