[package]
name = "scribe"
version = "1.1.0"
description = "Scribe - ADHD-friendly distraction-free writer"
authors = ["Stat-Wise"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.4.2"
chrono = "0.4.42"
lazy_static = "1.4"
dirs = "5.0"
open = "5.0"

